kubernetes/applications/longhorn-storage (archived)/manifests/wallos/wallos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos-ingress
  namespace: wallos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: wallos-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wallos.example.com
      secretName: wallos-tls
  rules:
    - host: wallos.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallos-app
                port:
                  number: 80
